--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         {
             "name": "Rootkit",
             "email": "290147164@qq.com",
-            "homepage":"#"
+            "homepage":"http://www.bftest.com"
         }
     ],
     "require": {
